fixed spacing in on radio buttons - Issue #12

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -30,6 +30,11 @@ h1, h2 {
   margin-top: 15px;
   margin-left: 5px;
 }
+
+.radio_buttons input {
+  margin-left: 4px;
+}
+
 .radio_buttons input, .check_boxes input {
   margin-right: 10px;
 }
